--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <!-- Page Heading -->
             <div class="text-center">
             <h2 class="section-heading text-uppercase">Services</h2>
-                <h3 class="section-subheading" style="color: white;">Expereince the Heritage of Classic Barbering!</h3>
+                <h3 class="section-subheading" style="color: white;">Experience the Heritage of Classic Barbering!</h3>
             </div>
           <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
@@ -156,7 +156,7 @@
                   <h4 class="card-title">
                     <a href="https://drive.google.com/file/d/17yhGNfixwdkyc-_87mWyePi-2dal6RG9/view?usp=sharing">Rejuvenation</a>
                   </h4>
-                  <p class="text-muted" align="justify">Step into the best spa in town to fell rejuvenated not just in the body but also in the mind & soul. Trust us to drain away all the stress with our international spa therapies, spa diet and cleanup regimen.</p>
+                  <p class="text-muted" align="justify">Step into the best spa in town to feel rejuvenated not just in the body but also in the mind & soul. Trust us to drain away all the stress with our international spa therapies, spa diet and cleanup regimen.</p>
                 </div>
               </div>
             </div>
